https://github.com/elastic/beats/compare/v5.0.0-beta1...master[Check the HEAD diff]

==== Breaking changes

*Affecting all Beats*

*Metricbeat*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*

*Metricbeat*

- Fix default configuration file on Windows to not enabled the `load` metricset. {pull}2632[2632]

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

==== Added

*Affecting all Beats*

*Metricbeat*

- Add experimental filebeat metricset in the beats module. {pull}2297[2297]
- Add experimental libbeat metricset in the beats module. {pull}2339[2339]

*Packetbeat*

*Topbeat*

*Filebeat*

- Add command line option -once to run filebeat only once and then close. {pull}2456[2456]

*Winlogbeat*

- Add `event_logs.batch_read_size` configuration option. {pull}2641[2641]

==== Deprecated

*Affecting all Beats*

*Metricbeat*

*Packetbeat*

*Topbeat*

*Filebeat*

*Winlogbeat*

////////////////////////////////////////////////////////////

[[release-notes-5.0.0-beta1]]
=== Beats version 5.0.0-beta1
https://github.com/elastic/beats/compare/v5.0.0-alpha5...v5.0.0-beta1[View commits]

==== Breaking changes

*Affecting all Beats*

- Change Elasticsearch output index configuration to be based on format strings. If index has been configured, no date will be appended anymore to the index name. {pull}2119[2119]
- Replace `output.kafka.use_type` by `output.kafka.topic` accepting a format string. {pull}2188[2188]
- If the path specified by the `-c` flag is not absolute and `-path.config` is not specified, it
  is considered relative to the current working directory. {pull}2245[2245]
- rename `tls` configurations section to `ssl`. {pull}2330[2330]
- rename `certificate_key` configuration to `key`. {pull}2330[2330]
- replace `tls.insecure` with `ssl.verification_mode` setting. {pull}2330[2330]
- replace `tls.min/max_version` with `ssl.supported_protocols` setting requiring full protocol name. {pull}2330[2330]

*Metricbeat*
